--- a/youtube/style/content.css
+++ b/youtube/style/content.css
@@ -4,6 +4,26 @@
     column-gap: 16px;
     row-gap: 35px; 
 }
+
+/* only activate when screen size <=  750px */
+@media (max-width: 750px) {
+    .video-grid {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media (min-width: 751px) and (max-width: 999px) {
+    .video-grid {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@media (min-width: 1000px) {
+    .video-grid {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+}
+
         .thumbnail {
             width: 100%;
             height: 200px;
