--- a/youtube/style/content.css
+++ b/youtube/style/content.css
@@ -5,25 +5,6 @@
     row-gap: 35px; 
 }
 
-/* only activate when screen size <=  750px */
-@media (max-width: 750px) {
-    .video-grid {
-        grid-template-columns: 1fr 1fr;
-    }
-}
-
-@media (min-width: 751px) and (max-width: 999px) {
-    .video-grid {
-        grid-template-columns: 1fr 1fr 1fr;
-    }
-}
-
-@media (min-width: 1000px) {
-    .video-grid {
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-    }
-}
-
         .thumbnail {
             width: 100%;
             height: 200px;
@@ -115,4 +96,31 @@
     font-family: Roboto, Arial;
     color: grey;
     font-size: 11px;
+}
+
+/* only activate when screen size <=  750px */
+@media (max-width: 750px) {
+    .video-grid {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media (min-width: 751px) and (max-width: 999px) {
+    .video-grid {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@media (min-width: 1000px) {
+    .video-grid {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+    .video-title {
+        font-size: 16px;
+        line-height: 24px;
+    }
+    .video-author,
+    .video-stats {
+        font-size: 14px;
+    }
 }
