--- a/js_notes/rock-paper-scissors/rock.css
+++ b/js_notes/rock-paper-scissors/rock.css
@@ -20,7 +20,8 @@ body{
     font-weight: bold;
     margin-top: 10px;
 }
-.reset-button {
+.reset-button,
+.auto-play-button {
     background-color: white;
     border: none;
     padding: 8px 15px;
